--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-
+ <base href="/">
 </head>
 <body>
   <app-root></app-root>
